--- a/test/unit/templates/default.erb
+++ b/test/unit/templates/default.erb
@@ -2,7 +2,7 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-  <title>Unit test file | <%= title %> | <%= template_name %> template | <%= timestamp %></title>
+  <title>Unit test file | <%= title %> | <%= template_name %> template | <%= timestamp %> | Prototype <%= PROTOTYPE_VERSION %></title>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <script type="text/javascript" charset="utf-8">
     var eventResults = {};
